--- a/roles/falcon_installation/defaults/main.yml
+++ b/roles/falcon_installation/defaults/main.yml
@@ -57,11 +57,11 @@ falcon_client_secret: ""
 # Setting the value to 1 would install the sensor at N-1.
 # The value must be an integer between 0 and 5 inclusive.
 #
-falcon_sensor_version: 0
+falcon_sensor_version_decrement: 0
 
 # The name of the Falcon Sensor Update Policy to use in order to specify the Falcon sensor
 # version to install. This is optional, however, if specified, please note that this will
-# override the falcon_sensor_version variable.
+# override the falcon_sensor_version_decrement variable.
 #
 # Note: To use the default Falcon Sensor update policy:
 #   falcon_sensor_update_policy_name: "platform_default"
