--- a/roles/falcon_installation/tasks/api.yml
+++ b/roles/falcon_installation/tasks/api.yml
@@ -24,9 +24,9 @@
 
 # Block when falcon_sensor_update_policy_name is supplied
 - block:
-  - name: "CrowdStrike Falcon | Override falcon_sensor_version when falcon_sensor_update_policy_name supplied"
+  - name: "CrowdStrike Falcon | Override falcon_sensor_version_decrement when falcon_sensor_update_policy_name supplied"
     ansible.builtin.set_fact:
-      falcon_sensor_version: 0
+      falcon_sensor_version_decrement: 0
 
   - name: "CrowdStrike Falcon | Build Sensor Update Policy API Query"
     ansible.builtin.set_fact:
@@ -87,9 +87,9 @@
 
 - name: CrowdStrike Falcon | Download Falcon Sensor Installation Package
   ansible.builtin.get_url:
-    url: "https://{{ falcon_cloud }}/sensors/entities/download-installer/v1?id={{ falcon_api_installer_list.json.resources[falcon_sensor_version | int].sha256 }}"
+    url: "https://{{ falcon_cloud }}/sensors/entities/download-installer/v1?id={{ falcon_api_installer_list.json.resources[falcon_sensor_version_decrement | int].sha256 }}"
     dest: "{{ falcon_install_tmp_dir }}"
-    checksum: "sha256:{{ falcon_api_installer_list.json.resources[falcon_sensor_version | int].sha256 }}"
+    checksum: "sha256:{{ falcon_api_installer_list.json.resources[falcon_sensor_version_decrement | int].sha256 }}"
     headers:
       authorization: "Bearer {{ falcon_api_oauth2_token.json.access_token }}"
   register: falcon_sensor_download
