Rebased + added uninstall role

--- a/molecule/falcon_installation/molecule.yml
+++ b/molecule/falcon_installation/molecule.yml
@@ -19,3 +19,17 @@ lint: |
   set -e
   yamllint .
   ansible-lint .
+scenario:
+  test_sequence:
+    - dependency
+    - lint
+    - destroy
+    - syntax
+    - create
+    - prepare
+    - converge
+    - idempotence
+    - side_effect
+    - verify
+    - cleanup
+    - destroy
