Update license to GPL-3.0-or-later

--- a/roles/falcon_uninstall/meta/main.yml
+++ b/roles/falcon_uninstall/meta/main.yml
@@ -15,7 +15,7 @@ galaxy_info:
   # - GPL-3.0-only
   # - Apache-2.0
   # - CC-BY-4.0
-  license: Unlicense
+  license: GPL-3.0-or-later
 
 
   min_ansible_version: 2.10
