--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -12,6 +12,22 @@ on:
       - '.github/workflows/linting.yml'
 
 jobs:
+  flake8:
+    runs-on: ubuntu-latest
+    env:
+      PY_COLORS: 1
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install flake8
+    - name: Lint with flake8
+      run:
+        flake8 ./plugins/
+
   pylint:
     runs-on: ubuntu-latest
     env:
@@ -23,13 +39,23 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pylint bandit
-    - name: Lint with flake8
-      run:
-        flake8 ./plugins/
+        python -m pip install pylint
     - name: Lint with pylint
       run: |
         pylint ./plugins/
+
+  bandit:
+    runs-on: ubuntu-latest
+    env:
+      PY_COLORS: 1
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install bandit
     - name: Lint with bandit
       run: |
         bandit  -l -i -r ./plugins/
