--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -6,7 +6,7 @@ on:
       - 'plugins/**'
       - '.github/workflows/ansible-test.yml'
 
-  pull_request:
+  pull_request_target:
     paths:
       - 'plugins/**'
       - '.github/workflows/ansible-test.yml'
