--- a/roles/falcon_installation/tasks/win_install.yml
+++ b/roles/falcon_installation/tasks/win_install.yml
@@ -13,6 +13,12 @@
     delay: "{{ falcon_windows_install_delay }}"
     until: falcon_installed is success
 
+  - name: CrowdStrike Falcon | Remove tmp install directory (Windows)
+    ansible.builtin.win_file:
+      path: "{{ falcon_install_win_temp_directory.path }}"
+      state: absent
+    when: falcon_install_win_temp_directory.path is defined
+
   - name: CrowdStrike Falcon Installer | Starting Falcon Sensor Service (Windows)
     ansible.windows.win_service:
       name: csfalconservice
