Updating tasks to use new module

--- a/roles/falcon_installation/tasks/install.yml
+++ b/roles/falcon_installation/tasks/install.yml
@@ -63,40 +63,31 @@
       state: absent
     when: falcon_install_temp_directory.path is defined
 
-  - name: CrowdStrike Falcon | Check if Customer ID (CID) is associated with Falcon Sensor (Linux)
-    ansible.builtin.command: "/opt/CrowdStrike/falconctl -g --cid"
-    register: cid_associated
-    failed_when:
-      - cid_associated.rc != 0
-      - cid_associated.rc != 255
-    changed_when: '"cid=" not in cid_associated.stdout'
-
   - name: CrowdStrike Falcon | Associate Falcon Sensor with your Customer ID (CID) (Linux)
-    ansible.builtin.command: "/opt/CrowdStrike/falconctl -s -f --cid={{ falcon_cid }}"
+    crowdstrike.falcon.falconctl:
+      cid: "{{ falcon_cid }}"
+      state: present
+    notify: CrowdStrike Falcon | Restart Falcon Sensor
     when:
-      - '"cid=" not in cid_associated.stdout'
       - not falcon_provisioning_token
-      - falcon_cid is defined
-      - ansible_facts.packages is defined
-      - installed_sensor in ansible_facts.packages
       - ansible_distribution != "MacOSX"
 
   - name: CrowdStrike Falcon | Associate Falcon Sensor with your Customer ID (CID) (macOS)
     ansible.builtin.command: "/Applications/Falcon.app/Contents/Resources/falconctl license {{ falcon_cid }}"
     when:
       - not falcon_provisioning_token
-      - falcon_cid is defined
       - ansible_distribution == "MacOSX"
       - falcon_already_installed is defined
       - not falcon_already_installed.stat.exists
 
   - name: CrowdStrike Falcon | Associate Falcon Sensor with your Customer ID (CID) Using Provisioning Token
-    ansible.builtin.command: "/opt/CrowdStrike/falconctl -s -f --cid={{ falcon_cid }} --provisioning-token={{ falcon_provisioning_token }}"
+    crowdstrike.falcon.falconctl:
+      cid: "{{ falcon_cid }}"
+      provisioning_token: "{{ falcon_provisioning_token }}"
+      state: present
+    notify: CrowdStrike Falcon | Restart Falcon Sensor
     when:
       - falcon_provisioning_token
-      - falcon_cid is defined
-      - ansible_facts.packages is defined
-      - installed_sensor in ansible_facts.packages
       - ansible_distribution != "MacOSX"
 
   - name: CrowdStrike Falcon Installer | Starting Falcon Sensor Daemon (Linux)
@@ -105,16 +96,14 @@
       state: "{{ falcon_service_state | default('started') }}"
       enabled: yes
     when:
-      - falcon_cid is defined
-      - ansible_facts.packages is defined
       - installed_sensor in ansible_facts.packages
 
   - name: CrowdStrike Falcon | Remove Falcon Agent ID (AID) If Building A Primary Image
-    ansible.builtin.command: "/opt/CrowdStrike/falconctl -d -f --aid"
+    crowdstrike.falcon.falconctl:
+      aid: yes
+      state: absent
     when:
       - falcon_remove_agent_id
-      - falcon_cid is defined
-      - ansible_facts.packages is defined
       - ansible_distribution != "MacOSX"
 
   - name: CrowdStrike Falcon | Starting Falcon Sensor (macOS)
