--- a/roles/falcon_installation/handlers/main.yml
+++ b/roles/falcon_installation/handlers/main.yml
@@ -1,2 +1,6 @@
 ---
 # handlers file for falcon_installation
+  - name: CrowdStrike Falcon | Restart Falcon Sensor
+    ansible.builtin.service:
+      name: falcon-sensor
+      state: "{{ falcon_service_state | default('restarted') }}"
