--- a/roles/falcon_installation/tasks/url.yml
+++ b/roles/falcon_installation/tasks/url.yml
@@ -3,10 +3,10 @@
 - name: CrowdStrike Falcon | Downloading Installation Package from URL
   ansible.builtin.get_url:
     url: "{{ falcon_download_url }}"
-    dest: "{{ falcon_install_tmp_dir }}"
+    dest: "{{ falcon_install_temp_directory.path }}"
   when:
     - falcon_download_url
-    - falcon_install_tmp_dir
+    - falcon_install_temp_directory
   register: falcon_sensor_download
   retries: "{{ falcon_retries }}"
   delay: "{{ falcon_delay }}"
