Initial commit for re-arrange/cleanup for new role

--- a/molecule/falcon_installation/converge.yml
+++ b/molecule/falcon_installation/converge.yml
@@ -5,4 +5,4 @@
     falcon_client_id: "{{ lookup('env', 'FALCON_CLIENT_ID') }}"
     falcon_client_secret: "{{ lookup('env', 'FALCON_CLIENT_SECRET') }}"
   roles:
-    - role: crowdstrike.falcon.falcon_installation
+    - role: crowdstrike.falcon.falcon_install
