--- a/.github/workflows/falcon_install.yml
+++ b/.github/workflows/falcon_install.yml
@@ -1,16 +1,16 @@
-name: "crowdstrike.falcon.falcon_installation"
+name: "crowdstrike.falcon.falcon_install"
 on:
   push:
     paths:
-      - 'roles/falcon_installation/**'
-      - 'molecule/falcon_installation/**'
-      - '.github/workflows/falcon_installation.yml'
+      - 'roles/falcon_install/**'
+      - 'molecule/falcon_install/**'
+      - '.github/workflows/falcon_install.yml'
   pull_request_target:
     types: [ labeled ]
     paths:
-      - 'roles/falcon_installation/**'
-      - 'molecule/falcon_installation/**'
-      - '.github/workflows/falcon_installation.yml'
+      - 'roles/falcon_install/**'
+      - 'molecule/falcon_install/**'
+      - '.github/workflows/falcon_install.yml'
 jobs:
   molecule:
     if: ${{ github.event.label.name == 'ok-to-test' }}
@@ -30,7 +30,7 @@ jobs:
           - { "distro":"ubuntu2004" }
           - { "distro":"debian10" }
         collection_role:
-          - falcon_installation
+          - falcon_install
     steps:
       - name: Check out code
         uses: actions/checkout@v2
