--- a/tests/test.yml
+++ b/tests/test.yml
@@ -2,5 +2,5 @@
 - hosts: localhost
   remote_user: root
   roles:
-    - crowdstrike.falcon.falcon_installation
+    - crowdstrike.falcon.falcon_install
     - crowdstrike.falcon.falcon_uninstall
