Only run push test when PR is merged

--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -2,6 +2,7 @@ name: Ansible Test
 
 on:
   push:
+    branches: [ main ]
     paths:
       - 'plugins/**'
       - '.github/workflows/ansible-test.yml'
