--- a/.github/workflows/falcon_installation.yml
+++ b/.github/workflows/falcon_installation.yml
@@ -6,12 +6,14 @@ on:
       - 'molecule/falcon_installation/**'
       - '.github/workflows/falcon_installation.yml'
   pull_request_target:
+    types: [ labeled ]
     paths:
       - 'roles/falcon_installation/**'
       - 'molecule/falcon_installation/**'
       - '.github/workflows/falcon_installation.yml'
 jobs:
   molecule:
+    if: ${{ github.event.label.name == "ok-to-test" }}
     runs-on: ubuntu-18.04
     env:
       PY_COLORS: 1
