double to single quote

--- a/.github/workflows/falcon_uninstall.yml
+++ b/.github/workflows/falcon_uninstall.yml
@@ -13,7 +13,7 @@ on:
       - '.github/workflows/falcon_uninstall.yml'
 jobs:
   molecule:
-    if: ${{ github.event.label.name == "ok-to-test" }}
+    if: ${{ github.event.label.name == 'ok-to-test' }}
     runs-on: ubuntu-18.04
     env:
       PY_COLORS: 1
