double to single quote

--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   ansible-test:
-    if: ${{ github.event.label.name == "ok-to-test" }}
+    if: ${{ github.event.label.name == 'ok-to-test' }}
     runs-on: ubuntu-18.04
     env:
       PY_COLORS: 1
