--- a/roles/falcon_configure/meta/main.yml
+++ b/roles/falcon_configure/meta/main.yml
@@ -1,11 +1,11 @@
 galaxy_info:
-  author: your name
-  description: your role description
-  company: your company (optional)
+  author: CrowdStrike Solution Architects
+  description: Configure CrowdStrike's Falcon sensor using Ansible.
+  company: CrowdStrike
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
-  # issue_tracker_url: http://example.com/issue/tracker
+  issue_tracker_url: https://github.com/CrowdStrike/ansible_collection_falcon
 
   # Choose a valid license ID from https://spdx.org - some suggested licenses:
   # - BSD-3-Clause (default)
@@ -14,9 +14,9 @@ galaxy_info:
   # - GPL-3.0-only
   # - Apache-2.0
   # - CC-BY-4.0
-  license: license (GPL-2.0-or-later, MIT, etc)
+  license: GPL-3.0-or-later
 
-  min_ansible_version: 2.1
+  min_ansible_version: 2.10
 
   # If this a Container Enabled role, provide the minimum Ansible Container version.
   # min_ansible_container_version:
@@ -27,25 +27,51 @@ galaxy_info:
   # To view available platforms and versions (or releases), visit:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
-  # platforms:
-  # - name: Fedora
-  #   versions:
-  #   - all
-  #   - 25
-  # - name: SomePlatform
-  #   versions:
-  #   - all
-  #   - 1.0
-  #   - 7
-  #   - 99.99
+  platforms:
+    - name: Amazon Linux 2
+      versions:
+        - any
+    - name: Amazon Linux
+      versions:
+        - 2018.03
+        - 2017.09
+    - name: Debian
+      versions:
+        - 9
+        - 10
+    - name: EL
+      versions:
+        - 6
+        - 7
+        - 8
+    - name: SLES
+      versions:
+        - 15
+        - 12SP1
+        - 12
+        - 11SP4
+    - name: Ubuntu
+      versions:
+        - focal
+        - bionic
+        - xenial
 
-  galaxy_tags: []
+  galaxy_tags:
     # List tags for your role here, one per line. A tag is a keyword that describes
     # and categorizes the role. Users find roles by searching for tags. Be sure to
     # remove the '[]' above, if you add tags to this list.
     #
     # NOTE: A tag is limited to a single word comprised of alphanumeric characters.
     #       Maximum 20 tags per role.
+    - crowdstrike
+    - falcon
+    - sensor
+    - linux
+    - windows
+    - macos
+    - security
+    - edr
+    - xdr
 
 dependencies: []
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
