--- a/.github/workflows/falcon_configure.yml
+++ b/.github/workflows/falcon_configure.yml
@@ -6,12 +6,14 @@ on:
       - 'molecule/falcon_configure/**'
       - '.github/workflows/falcon_configure.yml'
   pull_request_target:
+    types: [ labeled ]
     paths:
       - 'roles/falcon_configure/**'
       - 'molecule/falcon_configure/**'
       - '.github/workflows/falcon_configure.yml'
 jobs:
   molecule:
+    if: ${{ github.event.label.name == 'ok-to-test' }}
     runs-on: ubuntu-18.04
     env:
       PY_COLORS: 1
