--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -15,3 +15,5 @@ jobs:
     - uses: ansible/ansible-lint-action@master
       with:
         targets: roles
+        override-deps: |
+          rich>=9.5.1,<11.0.0
