--- a/roles/falcon_configure/tasks/main.yml
+++ b/roles/falcon_configure/tasks/main.yml
@@ -1,5 +1,11 @@
 ---
 # tasks file for falcon_configure
+- name: CrowdStrike Falcon | Set service state for Primary Images
+  ansible.builtin.set_fact:
+    falcon_service_state: stopped
+  when:
+    - falcon_remove_aid
+
 - block:
     - ansible.builtin.include_tasks: configure.yml
       # noqa unnamed-task 502
