--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -18,6 +18,7 @@ jobs:
     if: ${{ github.event.label.name == 'ok-to-test' }}
     runs-on: ubuntu-18.04
     strategy:
+      fail-fast: false
       matrix:
         python-version: ['2.7', '3.5', '3.6', '3.7', '3.8', '3.9', '3.10']
     env:
@@ -42,7 +43,7 @@ jobs:
         run: |
           sudo apt-get install -y libyaml-dev python3-venv
           python -m pip install --upgrade pip
-          pip install ansible yamllint jinja2 pylint pyyaml voluptuous
+          pip install ansible yamllint jinja2 pylint pyyaml voluptuous pycodestyle
           curl -L https://raw.githubusercontent.com/crowdstrike/falcon-linux-install-bash/main/falcon-linux-deploy.sh | sudo -E bash
 
       - name: Build/Install the Collection
