--- a/roles/falcon_install/tasks/api.yml
+++ b/roles/falcon_install/tasks/api.yml
@@ -7,6 +7,7 @@
     body:
       "client_id={{ falcon_client_id }}&client_secret={{ falcon_client_secret }}"
     return_content: true
+    follow_redirects: all
     status_code: 201
     headers:
       content-type: application/x-www-form-urlencoded
