Adding Windows CI for collections testing

--- a/roles/falcon_configure/tasks/win_configure.yml
+++ b/roles/falcon_configure/tasks/win_configure.yml
@@ -5,7 +5,7 @@
       state: "{{ falcon_service_state | default('started') }}"
       start_mode: auto
     when:
-      - falcon_cid is defined
+      - falcon_cid
 
   - name: CrowdStrike Falcon Installer | Remove any AID Key
     ansible.windows.win_regedit:
