--- a/.github/workflows/falcon_configure.yml
+++ b/.github/workflows/falcon_configure.yml
@@ -13,7 +13,9 @@ on:
       - '.github/workflows/falcon_configure.yml'
 jobs:
   molecule:
-    if: ${{ github.event.label.name == 'ok-to-test' }}
+    if: |
+      github.event_name == 'push' ||
+      github.event.label.name == 'ok-to-test'
     runs-on: ubuntu-18.04
     env:
       PY_COLORS: 1
