--- a/molecule/win_falcon_uninstall/verify.yml
+++ b/molecule/win_falcon_uninstall/verify.yml
@@ -7,8 +7,9 @@
   tasks:
   - name: Check status of Falcon Sensor
     ansible.windows.win_command: sc.exe query csagent
+    failed_when: no
     register: win_status
 
-  - name: Verify Falcon Sensor is installed and running
+  - name: Verify Falcon Sensor is not installed
     ansible.builtin.assert:
-      that: "'RUNNING' in win_status.stdout"
+      that: "'[SC] EnumQueryServicesStatus:OpenService FAILED' in win_status.stdout"
