--- a/.github/workflows/win_falcon_install.yml
+++ b/.github/workflows/win_falcon_install.yml
@@ -43,10 +43,8 @@ jobs:
       - name: Cache Vagrant boxes
         uses: actions/cache@v2
         with:
-          path: ~/.vagrant.d/boxes
-          key: ${{ runner.os }}-vagrant-${{ hashFiles('molecule/win*/molecule.yml') }}
-          restore-keys: |
-            ${{ runner.os }}-vagrant-
+          path: ~/.vagrant.d/boxes/jborean93-VAGRANTSLASH-${{ matrix.molecule_distro.distro }}
+          key: ${{ runner.os }}-${{ matrix.molecule_distro.distro }}-${{ matrix.collection_role }}-${{ hashFiles('molecule/win_falcon_install/molecule.yml') }}
 
       - name: Set up Python
         uses: actions/setup-python@v2
