--- a/.github/workflows/win_falcon_install.yml
+++ b/.github/workflows/win_falcon_install.yml
@@ -60,6 +60,7 @@ jobs:
           ansible-galaxy collection install $collection_file
 
       - name: Run role tests
+        continue-on-error: true
         run: >-
           molecule --version &&
           ansible --version &&
