Added issue with handler not running with sudo

--- a/roles/falcon_configure/handlers/main.yml
+++ b/roles/falcon_configure/handlers/main.yml
@@ -6,3 +6,4 @@
       state: "{{ falcon_service_state | default('restarted') }}"
       enabled: yes
     when: info.falconctl_info.cid
+    become: yes
