--- a/roles/falcon_configure/defaults/main.yml
+++ b/roles/falcon_configure/defaults/main.yml
@@ -1,5 +1,16 @@
 ---
 # defaults file for falcon_configure
+
+# Whether to enable or disable the logging of sensitive data being exposed in API calls.
+# The default is `yes`.
+#
+# Setting this to `no` can expose your falcon_client_secret and bearer token when
+# verbosity is turned up.
+#
+falcon_api_no_log: yes
+
+# Controls whether you would like to set or delete options associated with the Falcon Sensor.
+# The default is `yes` to set options.
 falcon_option_set: yes
 
 # Your Falcon Customer ID (CID) used to associate your sensor.
