Slimming down OS's for CI

--- a/.github/workflows/win_falcon_configure.yml
+++ b/.github/workflows/win_falcon_configure.yml
@@ -30,8 +30,8 @@ jobs:
       fail-fast: false
       matrix:
         molecule_distro:
-          - { "distro":"WindowsServer2012R2" }
-          - { "distro":"WindowsServer2016" }
+          # - { "distro":"WindowsServer2012R2" }
+          # - { "distro":"WindowsServer2016" }
           - { "distro":"WindowsServer2019" }
         collection_role:
           - falcon_configure
